[package]
name = "tokimo-package-ssh"
version = "0.1.0"
edition = "2024"


[dependencies]
russh = "0.60"
bytes = "1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "12", features = ["serde-json-impl"] }
chrono = "0.4"
tracing = "0.1"
